[package]
name = "run_it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"

[[bin]]
name = "run"
path = "src/main.rs"
