[package]
name = "run_it"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "A simple task runner"
repository = "https://github.com/Jak2k/run_it"
readme = "README.md"

include = [
  "src/**/*.rs",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE",
  "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"

[[bin]]
name = "run"
path = "src/main.rs"
